--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Wordle PY</h1>
+        <h1>Wordle PPY</h1>
         <input type="text" id="texto" placeholder="Palabra de 5 letras"/>
         <p id="error">Error</p>
         <button id="boton">Intentar</button>
